# budget-django

./: .Dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
budget/: urls.py  views.py
budget/templates/budget/: index.html  overview.html
config/: dates.py  settings.py  tests.py  urls.py
core/: exceptions.py  middleware.py
core/templates/: base.html
transactions/: admin.py  dataclasses.py  managers.py  models.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_remove_transaction_authorization_code_and_more.py  0003_transaction_unique_transaction.py
transactions/templates/transactions/: success.html
transactions/templates/transactions/includes/: toggle-fixed.html
transactions/templates/transactions/upload/: success.html
transactions/tests/: test_managers.py  test_models.py  test_views.py
user/: type.py
