[project]
name = "budget"
version = "0.1.0"
description = "Budget app (v4) that handles Rabobank transactions without modifying too much"
authors = [
    {name = "Timo Hermans",email = "tmhermans@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "django-stubs (>=6.0.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

